[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/entities/players/charles/spritesheet/charlie-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/entities/players/charles/spritesheet/charlie_attack-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/windows_command_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/states/StatesMachine.gd" type="Script" id=4]
[ext_resource path="res://src/states/charlie/battlemode/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/entities/players/charlie/battlemode/Charlie_battlemode.gd" type="Script" id=6]
[ext_resource path="res://src/states/charlie/battlemode/Air.gd" type="Script" id=7]
[ext_resource path="res://src/states/charlie/battlemode/Run.gd" type="Script" id=8]
[ext_resource path="res://src/states/charlie/battlemode/MoveChip.gd" type="Script" id=9]
[ext_resource path="res://src/card/ControlCard.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 15.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 10.0

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StatesMachine/MoveChip")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "transfer_chip"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StatesMachine/MoveChip")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "transfer_chip"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=8]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[node name="Charlie" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 16.0 ]
}
run_speed = 500
accel = 250

[node name="EnemyDetector" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 12

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="StatesMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StatesMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StatesMachine"]
script = ExtResource( 8 )

[node name="Air" type="Node" parent="StatesMachine"]
script = ExtResource( 7 )

[node name="MoveChip" type="Node" parent="StatesMachine"]
script = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -49.375
margin_top = -31.875
margin_right = 48.625
margin_bottom = -17.875
custom_fonts/font = ExtResource( 3 )
text = "State"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChipText" type="RichTextLabel" parent="."]
margin_left = -43.6529
margin_top = -53.1403
margin_right = 43.3471
margin_bottom = -21.1403
grow_horizontal = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Insert
Chip?
[/center]"
text = "Insert
Chip?
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
z_index = 4
texture = ExtResource( 1 )
hframes = 6
vframes = 4

[node name="ControlCard" parent="Sprite" instance=ExtResource( 10 )]
show_behind_parent = true
position = Vector2( -9, 5 )

[node name="AttackSprite" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 2 )
offset = Vector2( 32, 0 )
hframes = 6
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/extract = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/insert = SubResource( 6 )
anims/land = SubResource( 7 )
anims/rise = SubResource( 8 )
anims/run = SubResource( 9 )

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = -30
limit_right = 575
limit_bottom = 385
